--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.rightContainer {
+    width: 50%;
+}
+
 .bookCard {
     border: 1px solid grey;
     border-radius: .5rem;
     padding: 1rem;
+}
+
+.rootCard {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+form {
+    display: grid;
+    grid-column: 1fr;
+    grid-template-rows: auto;
+    gap: 1rem;
+    margin: 1rem;
 }
