--- a/style.css
+++ b/style.css
@@ -4,19 +4,31 @@
     padding: 0;
 }
 
+body {
+    background-color: darkgray;
+}
+
+.leftContainer {
+    grid-column: 1 / 2;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 .rightContainer {
-    width: 50%;
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.rootContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .bookCard {
     border: 1px solid grey;
     border-radius: .5rem;
     padding: 1rem;
-}
-
-.rootCard {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
 }
 
 form {
